--- a/Api-Boleto/src/main/resources/application.properties
+++ b/Api-Boleto/src/main/resources/application.properties
@@ -8,3 +8,16 @@ spring.datasource.username=admin
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.properties.schema.registry.url=http://localhost:8081
+app.kafka.topic.boleto=situation_boleto
+app.kafka.topic.notification=notification-boleto
+spring.kafka.properties.specific.avro.reader=true
+spring.kafka.consumer.group-id=api-boleto
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
